# ai-agents-udemy

./: .gitignore  LLM-info.md  README.md
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/deep_research/: email_agent.py
3_crew/: my.code-workspace
3_crew/debate/output/: decide.md  oppose.md  propose.md
3_crew/debate/src/debate/: crew.py
3_crew/debate/src/debate/config/: agents.yaml  tasks.yaml
3_crew/financial_researcher/output/: report.md
3_crew/financial_researcher/src/financial_researcher/: main.py
3_crew/tech_researcher/: README.md  pyproject.toml
3_crew/tech_researcher/src/tech_researcher/: main.py
3_crew/tech_researcher/src/tech_researcher/config/: agents.yaml  tasks.yaml
3_crew/technical_researcher/: README.md  pyproject.toml
3_crew/technical_researcher/output/: report.md
3_crew/technical_researcher/src/technical_researcher/: crew.py  main.py
3_crew/technical_researcher/src/technical_researcher/config/: agents.yaml  tasks.yaml
