[project]
name = "tech_researcher"
version = "0.1.0"
description = "tech_researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
tech_researcher = "tech_researcher.main:run"
run_crew = "tech_researcher.main:run"
train = "tech_researcher.main:train"
replay = "tech_researcher.main:replay"
test = "tech_researcher.main:test"
run_with_trigger = "tech_researcher.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
