[project]
name = "technical_researcher"
version = "0.1.0"
description = "technical_researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.0"
]

[project.scripts]
technical_researcher = "technical_researcher.main:run"
run_crew = "technical_researcher.main:run"
train = "technical_researcher.main:train"
replay = "technical_researcher.main:replay"
test = "technical_researcher.main:test"
run_with_trigger = "technical_researcher.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
